# dadou_robot_ros

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Jenkinsfile  Jenkinsfile-with-sonar  README.md  audio.json  audio.py  audio2.py  audio_sequence.json  com.py  conftest.py  dadou_robot_ros.code-workspace  dadou_utils  docker-compose.yml  docker_build.sh  docker_run.sh  head.py  hello-ros.py  image_mapping.py  input_message.json  lights.py  logging.conf  main.py  mapping.py  multithread_main.py  package.xml  packages.txt  pytest.ini  requirements-test.txt  requirements.txt  sequences.json  setup.cfg.bak  setup.py  singlethread_main.py  test.py  test_servo.py  todo.txt  utils.py  (+3 more)
.github/workflows/: tests.yml
audios/didier20/: Readme.md
audios/speak/: langues.mp3.asd
cam/: cam.py  cam2.py
cam/templates/: index.html
ci/: github-actions-runner.yml
conf/: Makefile  chatgpt-key.txt  logging-test.conf  logging.conf  packages-docker.txt  packages.txt  requirements.txt  test_key.txt
conf/docker/: Dockerfile  Dockerfile-bak  docker-compose.yml  docker_bashrc  docker_build.sh
conf/json/: relays.json  robot_config.json
conf/logging/: logging.conf
conf/ros2/: launch.txt  package.xml  setup.py
conf/ros2_dependencies/robot_sim/: CMakeLists.txt  package.xml
conf/ros2_dependencies/robot_sim/config/: gz_bridge.yaml
conf/ros2_dependencies/robot_sim/launch/: sim.launch.py
conf/ros2_dependencies/robot_sim/robot_sim_lib/: __init__.py  leds_logic.py  servos_logic.py
conf/ros2_dependencies/robot_sim/scripts/: leds_sim_node  servos_sim_node
conf/ros2_dependencies/robot_sim/worlds/: stage.sdf
conf/ros2_dependencies/robot_web/: package.xml  setup.py
conf/ros2_dependencies/robot_web/launch/: web.launch.py
conf/ros2_dependencies/robot_web/robot_web/: web_bridge_node.py  web_catalog.py  web_protocol.py
conf/ros2_dependencies/robot_web/static/: app.js  index.html  style.css
conf/rpi/: .bashrc  bashrc  didier.service  project_bash  remote.desktop  robot-ros.service
conf/scripts/: collect-incident.sh  compose-up-local.sh  compose-up-pi.sh  docker-stop.sh  generate_expressions.py  launch-ros-in-docker.sh  launch-sim-in-docker.sh  out  project-deploy.sh  pub.sh  run.sh  update-requirements.sh  validate-cmdvel-protocol.sh
conf/systemd/: avahi-alias-didier.service
conf/tests/: requirements.txt
dadourobot/: config.py  json_manager.bak  main.py  robot_config.py  robot_factory.py  robot_static.py  sequence.py  utils.py
dadourobot/actions/: abstract_actions.py  abstract_json_actions.py  audio_manager.py  audios.py  face.py  (+16 more)
db/: audios.db  sequences.db
deploy/: bashrc  copy-start.sh  push_from_home.sh  push_from_home.sh.sh  update_run.sh
didier-python/: todo.txt
docs/: README.md  architecture.md  chantiers.md  etude-arbitrage-actionneurs.md  etude-declenchement-conversation.md  etude-interface-web.md  etude-odometrie.md  etude-telediagnostic.md  interfaces.md  operations.md
examples/: file_watcher.py  file_watcher3.py  led_strip.py  neopixel.py  servo.py
json/: audio.json  audio_sequence.json  audios-data.json  audios.json  colors.json  config.json  control_config.json  eternel-short2.json  expressions.json  face_sequence.json  lights.json  lights_base.json  lights_helmet.json  lights_sequence.json  mappings.json  piano.json  relays.json  robot_config.json  robot_lights.json  visual.json  visuals.json
logs/: didier.log.2021-12-13_01  didier.log.2021-12-15_01
python/: animations.py  audio.py  com.py  config.py  file_watcher.py  head.py  json_manager.py  keys_queue.py  lights.py  main.py  mapping.py  neck.py  path_time.py  sequence.py  utils.py  visual.py  wheel.py
robot/: main.py  robot_config.py  robot_static.py
robot_bringup/: package.xml
robot_interfaces/: CMakeLists.txt
scripts/: .asoundrc  .bashrc  bashrc  before-lunch.sh  check_internet.sh  clone.sh  copy-audio.sh  copy-external-module.sh  deploy-robot.sh  deploy-start.sh  deploy.sh  didier-python.sh  didier.service  first.sh  install-didier.sh  install-lib.sh  install-robot.sh  launch-didier-install.sh  params-robot.sh  project-deploy.sh  push-didier.sh  push_from_home.sh  run-robot.sh  run.sh  test.sh  update_run.sh  update_test.sh
sequences/: sequence_audio.py
tests/: test_servo.py  test_visuals.py
(+394 files in other folders)
