<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_web</name>
  <version>0.1.0</version>
  <description>Pont web (WebSocket + HTTP) du robot de théâtre Dadou : supervision, contenus (animation/face/audio/lights), panneau technique. W0 -- aucun accès roues ni verrou e_stop (voir docs/etude-interface-web.md).</description>
  <maintainer email="achats@duvam.net">dadou</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>robot_interfaces</depend>
  <!-- Pilotage roues (SIM-ONLY) : Twist publié sur cmd_vel_web (twist_mux prio
       50). Vidéo : Image de la caméra embarquée, encodée en JPEG côté pont. -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Serveur HTTP/WebSocket ; pas de dépendance ROS pour ça, un simple paquet
       système (comme dans le Dockerfile-sim : apt install python3-aiohttp). -->
  <exec_depend>python3-aiohttp</exec_depend>
  <!-- Encodage JPEG du flux vidéo (PIL). apt : python3-pil (Dockerfile-sim). -->
  <exec_depend>python3-pil</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
